--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -5,7 +5,25 @@
 </p>
 
 
-<div class="cart-items" *ngFor="let item of items">
+<div class="cart-item" *ngFor="let item of items">
     <span>{{ item.name }}</span>
     <span>{{ item.price | currency }}</span>
 </div>
+
+<form [formGroup]="checkoutForm" (ngSubmit)="onSubmit()">
+    <div>
+        <label for="name">Name</label>
+        <input id="name" type="text" formControlName="name">
+    </div>
+
+    <div>
+        <label for="address">Address</label>
+        <input id="address" type="text" formControlName="address">
+    </div>
+
+    <button type="submit" class="button">Purchase</button>
+</form>
+
+<p>
+    <button type="button" (click)="clearCart()">Empty cart</button>
+</p>
